实现Pod/Job的删除,获取接口
