# pkg/resource/pod/pod.go
@@ -7,6 +7,7 @@ import (
 	"ufleet-deploy/pkg/backend"
 	"ufleet-deploy/pkg/cluster"
 	"ufleet-deploy/pkg/log"
+	"ufleet-deploy/pkg/resource/util"
 
 	corev1 "k8s.io/client-go/pkg/api/v1"
 )
@@ -31,10 +32,14 @@ type PodController interface {
 	Delete(group, workspace, pod string, opt DeleteOption) error
 	Get(group, workspace, pod string) (PodInterface, error)
 	List(group, workspace string) ([]PodInterface, error)
+	ListGroup(group string) ([]PodInterface, error)
 }
 
 type PodInterface interface {
 	Info() *Pod
+	GetRuntime() (*Runtime, error)
+	GetStatus() (*Status, error)
+	GetTemplate() (string, error)
 }
 
 type PodManager struct {
@@ -50,8 +55,8 @@ type PodWorkspace struct {
 	Pods map[string]Pod `json:"pods"`
 }
 
-type PodRuntime struct {
-	*corev1.Pod
+type Runtime struct {
+	Pod *corev1.Pod
 }
 
 //TODO:是否可以添加一个特定的只存于内存的标记位
@@ -65,6 +70,8 @@ type Pod struct {
 	AppStack   string `json:"app"`
 	User       string `json:"user"`
 	Cluster    string `json:"cluster"`
+	Template   string `json:"template"`
+	CreateTime int64  `json:"createtime"`
 	memoryOnly bool
 }
 
@@ -132,6 +139,29 @@ func (p *PodManager) List(groupName, workspaceName string) ([]PodInterface, erro
 	return pis, nil
 }
 
+func (p *PodManager) ListGroup(groupName string) ([]PodInterface, error) {
+
+	p.locker.Lock()
+	defer p.locker.Unlock()
+
+	group, ok := p.Groups[groupName]
+	if !ok {
+		return nil, fmt.Errorf("%v:%v", ErrGroupNotFound, groupName)
+	}
+
+	pis := make([]PodInterface, 0)
+
+	//不能够直接使用k,v来赋值,会出现值都是同一个的问题
+	for _, v := range group.Workspaces {
+		for k := range v.Pods {
+			t := v.Pods[k]
+			pis = append(pis, &t)
+		}
+	}
+
+	return pis, nil
+}
+
 func (p *PodManager) Create(groupName, workspaceName string, data interface{}, opt CreateOptions) error {
 
 	p.locker.Lock()
@@ -184,8 +214,104 @@ func (p *PodManager) Delete(group, workspace, podName string, opt DeleteOption) 
 	}
 }
 
-func (pod *Pod) Info() *Pod {
-	return pod
+func (p *Pod) Info() *Pod {
+	return p
+}
+
+func (p *Pod) GetRuntime() (*Runtime, error) {
+	ph, err := cluster.NewPodHandler(p.Group, p.Workspace)
+	if err != nil {
+		return nil, err
+	}
+
+	pod, err := ph.Get(p.Workspace, p.Name, cluster.GetOptions{})
+	if err != nil {
+		return nil, err
+	}
+
+	return &Runtime{Pod: pod}, nil
+}
+
+func (p *Pod) GetRuntimeDirect() (*Runtime, error) {
+	ph, err := cluster.NewPodHandler(p.Group, p.Workspace)
+	if err != nil {
+		return nil, err
+	}
+
+	pod, err := ph.Get(p.Workspace, p.Name, cluster.GetOptions{Direct: true})
+	if err != nil {
+		return nil, err
+	}
+
+	return &Runtime{Pod: pod}, nil
+}
+
+type ContainerStatus struct {
+	corev1.ContainerStatus
+}
+
+type Status struct {
+	Name              string            `json:"name"`
+	Phase             string            `json:"phase"`
+	IP                string            `json:"ip"`
+	HostIP            string            `json:"hostip"`
+	StartTime         int64             `json:"starttime"`
+	Running           int               `json:"running"`
+	Total             int               `json:"total"`
+	ContainerStatuses []ContainerStatus `json:"containerstatuses"`
+}
+
+func V1PodToPodStatus(pod corev1.Pod) *Status {
+	var s Status
+	s.Name = pod.Name
+	ps := pod.Status
+	s.Phase = string(ps.Phase)
+	s.IP = ps.PodIP
+	s.Total = len(pod.Spec.Containers)
+	s.HostIP = ps.HostIP
+	if ps.StartTime != nil {
+		s.StartTime = ps.StartTime.Unix()
+	}
+
+	for _, v := range ps.ContainerStatuses {
+		s.ContainerStatuses = append(s.ContainerStatuses, ContainerStatus{v})
+		if v.Ready {
+			s.Running += 1
+		}
+	}
+	return &s
+
+}
+
+func (p *Pod) GetStatus() (*Status, error) {
+	runtime, err := p.GetRuntime()
+	if err != nil {
+		return nil, err
+	}
+	s := V1PodToPodStatus(*runtime.Pod)
+
+	return s, nil
+}
+
+func (p *Pod) GetTemplate() (string, error) {
+	if !p.memoryOnly {
+		return p.Template, nil
+	} else {
+		runtime, err := p.GetRuntimeDirect()
+		if err != nil {
+			return "", log.DebugPrint(err)
+		}
+		pod := runtime.Pod
+		log.DebugPrint(pod.Kind)
+		log.DebugPrint(pod.APIVersion)
+
+		t, err := util.GetYamlTemplateFromObject(runtime.Pod)
+		if err != nil {
+			return "", log.DebugPrint(err)
+		}
+
+		return *t, nil
+	}
 }
 
 func InitPodController(be backend.BackendHandler) (PodController, error) {
